<?xml version="1.0"?>
<package format="3">
  <name>object_on_lanelet_checker</name>
  <version>0.1.0</version>
  <description>Node to filter obstacles that are located on the current lanelet route.</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>tier4_perception_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>autoware_planning_msgs</depend>

  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>lanelet2_extension</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

